# job-scrapper

./: .breakpoints  .replit  LICENSE  jobs.csv  main.py  pyproject.toml  save.py  scrapper_remoteok.py  scrapper_stackoverflow.py  scrapper_wework.py
templates/: error.html  home.html  result.html
